apps/adguard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguardhome
  namespace: adguard
spec:
  selector:
    app: adguardhome
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
