apps/adguard/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
 name: adguardhome
 namespace: adguard
spec:
 hostnames:
 - adguard.tomasmerino.com
 parentRefs:
 - name: homelab-gateway
   namespace: networking
 rules:
  - backendRefs:
    - name: adguardhome
      port: 80
